# ZC2

./: CMakeLists.txt  LICENSE  README.md  commands_tree  install.sh  uninstall.sh
etc/: config.json  projects.json  registry.json  zc-lock.json
etc/templates/: template.c  template.h
include/: Command.hh  Config.hh  File.hh  Header.hh  Init.hh  Lib.hh  LibCreate.hh  LibList.hh  Run.hh  Table.hh  ZCError.hh  core.hpp  display.h  header.hpp  helpers.hh  lib.hpp  run.hpp  zcerror.hpp  zcio.hh
include/commands/: Build.hh  Command.hh  Init.hh  Project.hh  Run.hh
include/commands/Lib/: Create.hh  Install.hh  List.hh  Remove.hh
include/objects/: File.hh  Postman.hh  ProjectsRegistry.hh  Registry.hh  Settings.hh  ZCError.hh
src/: Config.cc  File.cc  Header.cc  Init.cc  Lib.cc  LibCreate.cc  LibList.cc  Run.cc  Table.cc  ZCError.cc  core.cc  display.c  header.cc  helpers.cc  lib.cc  main.cc  run.cc  zcerror.cc  zcio.cc
src/commands/: Build.cc  Init.cc  Project.cc  Run.cc
src/commands/Lib/: Create.cc  List.cc  Remove.cc
src/objects/: File.cc  ProjectsRegistry.cc  Registry.cc  Settings.cc  ZCError.cc
